penpai: front-end

--- a/ui/src/assets/manifest.json
+++ b/ui/src/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "hut",
-  "short_name": "hut",
+  "name": "penpai",
+  "short_name": "penpai",
   "icons": [
     {
       "src": "/apps/grid/android-chrome-512x512.png",
