--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hut",
+  "name": "penpai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,18 +8,22 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@urbit/api": "^2.0.0",
-    "@urbit/http-api": "^2.0.0",
-    "@urbit/foundation-design-system": "^0.7.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@urbit/api": "^2.3.0",
+    "@urbit/http-api": "github:urbit/js-http-api",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-pure-modal": "^2.2.5"
   },
   "devDependencies": {
     "@urbit/vite-plugin-urbit": "^0.8.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
+    "tailwindcss": "^3.3.1",
     "vite": "^2.6.7"
   }
 }
