--- a/ui/package.json
+++ b/ui/package.json
@@ -24,6 +24,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "rewire": "^7.0.0",
     "tailwindcss": "^3.3.1",
     "vite": "^2.6.7"
   }
